# advent-of-code-2023-c

./: CMakeLists.txt  README.md
include/: aoc.h  array.h  file.h  list.h
js/: day12.js
src/: main.c
src/common/: array.c  file.c  list.c
src/day11/: day11.c
src/day12/: day12.c
